# greeter

./: .editorconfig  .travis.yml  AUTHORS  CMakeLists.txt  HACKING  INSTALL  README  README.md  build.sh  lightdm-greeter-capture.sh  meson.build  meson_options.txt  pantheon-greeter.conf
.github/workflows/: gettext.yml  main.yml
cmake/: Translations.cmake
compositor/: BackgroundBlurEffect.vala  BackgroundContainer.vala  BackgroundManager.vala  BackgroundUtils.vala  BlurActor.vala  BlurManager.vala  DBus.vala  DBusAccelerator.vala  DBusBackgroundManager.vala  Dialogs.vala  KeyboardManager.vala  MaskCorners.vala  MediaFeedback.vala  NotificationStack.vala  PantheonShell.vala  PointerLocator.vala  RendererInfo.vala  SettingsDaemon.vala  SubprocessSupervisor.vala  SystemBackground.vala  Utils.vala  Wallpaper.vala  WindowManager.vala  Zoom.vala  main.vala  meson.build
compositor/Background/: Animation.vala  Background.vala  BackgroundCache.vala  BackgroundContainer.vala  BackgroundManager.vala  BackgroundSource.vala  BlurEffect.vala  SystemBackground.vala
compositor/HotCorners/: Barrier.vala
compositor/ShellClients/: CenteredWindow.vala  ExtendedBehaviorWindow.vala  HideTracker.vala  ManagedClient.vala  NotificationsClient.vala  PanelClone.vala  PanelWindow.vala  PositionedWindow.vala  ShellClientsManager.vala  ShellWindow.vala
compositor/Widgets/: SafeWindowClone.vala
compositor/WingpanelManager/: BackgroundUtils.vala  DBusWingpanelManager.vala  FocusManager.vala  WingpanelManager.vala
compositor/protocol/: pantheon-desktop-shell-v1.xml  pantheon-desktop-shell.vapi
data/: 40-io.elementary.greeter.conf  Application.css  Card.css  Check.css  DateTime.css  Greeter.css  MainWindow.css  PasswordEntry.css  compositor.gresource.xml  compositor.gschema.xml  create-symlink.py  greeter.appdata.xml.in  greeter.gresource.xml  greeter.metainfo.xml.in  io.elementary.greeter.AccountsService.policy  io.elementary.greeter.AccountsService.xml  io.elementary.greeter.blacklistmediakeys  io.elementary.greeter.conf  io.elementary.greeter.desktop.in  io.elementary.greeter.desktop.in.in  io.elementary.greeter.pkla  io.elementary.greeter.policy.in  io.elementary.greeter.rules  lightdm.conf  meson.build  org.pantheon.desktop.greeter.gschema.xml  pantheon-greeter.conf  pantheon-greeter.desktop  pantheon-greeter.desktop.in
debian/: 40-io.elementary.greeter.conf  40-pantheon-greeter.conf  changelog  control  copyright  install  io.elementary.greeter.lintian-overrides  pantheon-greeter.lintian-overrides  postinst  postrm  prerm  rules  watch
debian/patches/: revert-r366-login-string.patch  series
po/: CMakeLists.txt  LINGUAS  POTFILES  ace.po  af.po  ak.po  am.po  an.po  ar.po  ast.po  az.po  be.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  cr.po  cs.po  cu.po  cv.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  en_ZA.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fil.po  (+95 more)
po/extra/: LINGUAS  POTFILES  aa.po  ab.po  ace.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  (+171 more)
protocol/: meson.build  pantheon-desktop-shell-v1.xml  pantheon-desktop-shell.vapi
session-manager/: SessionManager.vala  SettingsDaemon.vala  SubprocessSupervisor.vala  main.vala  meson.build
session-worker/: Application.vala  SessionWorker.vala  meson.build
src/: Application.vala  Authenticator.vala  Avatar.vala  CapsLockRevealer.vala  ComponentWatcher.vala  CredentialsArea.vala  CredentialsAreaActor.vala  DateTimeWidget.vala  FPrintUtils.vala  FingerprintIndicatorArea.vala  GreeterAccountsServicePlugin.vala  Indicators.vala  LoginBox.vala  LoginButtonArea.vala  LoginMask.vala  MainWindow.vala  NumLockRevealer.vala  PantheonAccountsServicePlugin.vala  PantheonGreeter.vala  PantheonUser.vala  PasswordArea.vala  PasswordEntry.vala  PromptText.vala  SessionButton.vala  SessionLauncher.vala  Settings.vala  SettingsDaemon.vala  SettingsPortal.vala  ShadowedLabel.vala  SubprocessSupervisor.vala  TimeLabel.vala  UserList.vala  UserListActor.vala  Utilities.vala  Wallpaper.vala  config.vala.cmake  config.vala.in  indicators.vala  loginbox.vala  meson.build  (+1 more)
src/AccentColor/: AccentColorManager.vala  Color.vala  ColorExtractor.vala  NamedColor.vala
src/Cards/: BackgroundImage.vala  BaseCard.vala  GuestCard.vala  ManualCard.vala  UserCard.vala
src/Credentials/: FingerprintCredentials.vala
src/Gateways/: DummyGateway.vala  LightDMGateway.vala  LoginGateway.vala
src/Greetd/: Greeter.vala  Request.vala  Response.vala
src/Indicators/: AccessibilityMenu.vala  EntryList.vala  IndicatorBar.vala  IndicatorEntry.vala  IndicatorPopover.vala  Indicators.vala  KeyboardLayoutMenu.vala  PopoverManager.vala  PowerMenu.vala  StyleClass.vala  WingpanelSettings.vala
src/Interfaces/: Credentials.vala  LoginMask.vala
src/LoginOptions/: GuestLogin.vala  LoginOption.vala  ManualLogin.vala  UserLogin.vala
src/Widgets/: AbstractCredentialsArea.vala  Avatar.vala  BackgroundImage.vala  CapsLockRevealer.vala  Credentials.vala  CredentialsArea.vala  CredentialsAreaActor.vala  DateTimeWidget.vala  FingerprintCredentials.vala  FingerprintIndicatorArea.vala  LoginBox.vala  LoginButtonArea.vala  LoginButtonCredentials.vala  PasswordArea.vala  PasswordCredentials.vala  PasswordEntry.vala  SessionButton.vala  TimeLabel.vala  Wallpaper.vala
vapi/: Clutter-13.metadata  Meta-13.metadata  Meta-18.metadata  accountsservice.vapi  gdk-wayland-3.0.vapi  gl.vapi  indicator-0.4.vapi  indicator.vapi  libmutter.vapi  libsystemd.vapi  meson.build  mutter-clutter.vapi  mutter-cogl-14.vapi  mutter-cogl-6.vapi  mutter-cogl-pango-7.deps  posix-fixes.vapi
